--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <h3>Refrigerante</h3>
                     <p>Projeto criado com HTML5, CSS e JavaScript. Neste projeto aprendi como usar
                         escala de animação no CSS.</p>
-                    <a href="https://github.com/Lecsilva85" target="_blank">Ver Projeto →</a>
+                    <a href="https://github.com/Lecsilva85/Refri-DevClub" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
