Corrigido um texto em <p> conteudo-sobre.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             <div class="conteudo-sobre">
                 <h2>Desenvolvedor web apaixonado por transformar ideias em realidade digital</h2>
-                <p>Sou um desenvovedor web especializado em criar experiências digitais excepcionais. Com foco em design
+                <p>Sou um desenvolvedor web especializado em criar experiências digitais excepcionais. Com foco em design
                     centrado no usuário, trabalho para construir aplicações web modernas e intuitivas.</p>
                 <p>Minha abordagem combina criatividade com funcionalidade, resultando em produtos digitais que são
                     tanto bonitos quanto eficientes.</p>
