--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
                 </div>
             </div>
 
+            <div class="card-projeto efeito-cursor">
+                <img class="img-projeto" src="./assets/Projeto-Mario.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Mario Bros.</h3>
+                    <p>Neste projeto explorei a implementação de formulários web utilizando as tecnologias HTML, CSS e JavaScript.</p>
+                    <a href="https://github.com/Lecsilva85/Projeto-Mario" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
         </div>
     </section>
 
