Adicionado Projeto da Nike

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 
     <section class="principal">
         <div>
-            <h1 class="txtEfeito span" data-texto="Leandro" >Olá, eu sou <span data-value="Leandro">Leandro</span>.</h1>
-            <p>Desenvolvedor criativo focado em construir experiências digitais excepcionais e interfaces intuitivas.</p>
+            <h1 class="txtEfeito span" data-texto="Leandro">Olá, eu sou <span data-value="Leandro">Leandro</span>.</h1>
+            <p>Desenvolvedor criativo focado em construir experiências digitais excepcionais e interfaces intuitivas.
+            </p>
             <a href="#projetos" class="botao efeito-cursor">Ver Projetos</a>
         </div>
     </section>
@@ -119,8 +120,19 @@
                 <img class="img-projeto" src="./assets/Projeto-Mario.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Projeto Mario Bros.</h3>
-                    <p>Neste projeto explorei a implementação de formulários web utilizando as tecnologias HTML, CSS e JavaScript.</p>
+                    <p>Neste projeto explorei a implementação de formulários web utilizando as tecnologias HTML, CSS e
+                        JavaScript.</p>
                     <a href="https://github.com/Lecsilva85/Projeto-Mario" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto efeito-cursor">
+                <img class="img-projeto" src="./assets/Nike.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Nike Air Jordan 2025</h3>
+                    <p>Criado com HTML5, CSS e JavaScript. Neste projeto criamos um efeito animado em um texto, onde ao
+                        rolarmos a página, os caracteres surgem de forma separada.</p>
+                    <a href="https://github.com/Lecsilva85/Projeto-Nike" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
@@ -134,7 +146,8 @@
 
             <div class="conteudo-sobre">
                 <h2>Desenvolvedor web apaixonado por transformar ideias em realidade digital</h2>
-                <p>Sou um desenvolvedor web especializado em criar experiências digitais excepcionais. Com foco em design
+                <p>Sou um desenvolvedor web especializado em criar experiências digitais excepcionais. Com foco em
+                    design
                     centrado no usuário, trabalho para construir aplicações web modernas e intuitivas.</p>
                 <p>Minha abordagem combina criatividade com funcionalidade, resultando em produtos digitais que são
                     tanto bonitos quanto eficientes.</p>
@@ -241,9 +254,9 @@
 
     </section>
 
-        <div class="container">
-            <a href="#home">⇧ Home ⇧</a>
-        </div>
+    <div class="container">
+        <a href="#home">⇧ Home ⇧</a>
+    </div>
 
     <footer>
         <p>Desenvolvido por Leandro</p>
