Adicionado projeto Nintendo Switch.

--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
                 </div>
             </div>
 
+            <div class="card-projeto efeito-cursor">
+                <img class="img-projeto" src="./assets/Nintendo Switch.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Nintendo Switch</h3>
+                    <p>Projeto criado com efeitos animados na transição das imagens, usando HTML, CSS e JavaScript.
+                        Também responsivo para celular.</p>
+                    <a href="https://github.com/Lecsilva85/Nintendo-Switch" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
         </div>
     </section>
 
