Adicionado projeto Coca-Cola

--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
                 </div>
             </div>
 
+            <div class="card-projeto efeito-cursor">
+                <img class="img-projeto" src="./assets/screen.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Coca-Cola</h3>
+                    <p>Projeto responsivo, criado com as tecnologias HTML, CSS e JavaScript. As imagens do projeto
+                        estão com efeito coverflow e no modo responsivo o menu é no estilo hambúrguer.</p>
+                    <a href="https://github.com/Lecsilva85/Coca-Cola/tree/main" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
         </div>
     </section>
 
